se creo sobre el artista dimash la hoja de estilos, con el favicon para la pestaña, quedo responsive

--- a/pages/dimash.html
+++ b/pages/dimash.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/dimash.css" />
+    <link rel="stylesheet" href="../css/dimash.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,6 +16,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
     />
     <title>Dimash: Sos d'un Terrien en Détresse-SoundG3</title>
+    <link rel="shortcut icon" href="../img/FavIcon/android-chrome-512x512.png" type="image/x-icon">
   </head>
   <body>
     <head></head>
@@ -25,7 +26,7 @@
           <div class="row">
             <div class="col-sm-12 col-md-5 col-lg-3 pt-5 pb-4 contenedorImagen">
               <img
-                src="./img/dimash-front.jpg"
+                src="../img/dimasImagenes/dimash-front.jpg"
                 alt="caratula dimash"
                 class="img-fluid artistaImg"
               />
@@ -55,14 +56,14 @@
                   <div class="text-center pb-2">
                     <a href="#">
                       <img
-                        src="./img/discodimash1.jpg"
+                        src="../img/dimasImagenes/discodimash1.jpg"
                         alt="#"
                         class="conjuntoAlbum"
                       />
                     </a>
                     <a href="#">
                       <img
-                        src="./img/discodimash3.jpg"
+                        src="../img/dimasImagenes/discodimash3.jpg"
                         alt="#"
                         class="conjuntoAlbum"
                       />
@@ -71,14 +72,14 @@
                   <div class="text-center pc-2">
                     <a href="#">
                       <img
-                        src="./img/images.jpg"
+                        src="../img/dimasImagenes/discodimash2.jpg"
                         alt="#"
                         class="conjuntoAlbum"
                       />
                     </a>
                     <a href="#">
                       <img
-                        src="./img/discodimash4.jpg"
+                        src="../img/dimasImagenes/discodimash4.jpg"
                         alt="#"
                         class="conjuntoAlbum"
                       />
@@ -214,7 +215,7 @@
             <a href="#">
               <i class="bi bi-plus-circle iconoSuperpuesto "></i>
               <img
-                src="./img/favoritodisco.jpg"
+                src="../img/favoritodisco.jpg"
                 class="card-img imagenFondo"
                 alt="Imagen disco"
               />
@@ -228,7 +229,7 @@
           <div class="col-12 col-md-3 pt-2 card text-bg-dark">
             <a href="#">
               <img
-                src="./img/Taylor-Swift.webp"
+                src="../img/Taylor-Swift.webp"
                 class="card-img imagenFondo"
                 alt="Taylor Swift"
               />
@@ -237,7 +238,7 @@
           <div class="col-12 col-md-3 pt-2 card text-bg-dark">
             <a href="#">
               <img
-                src="./img/wos1.jpg"
+                src="../img/wos1.jpg"
                 class="card-img imagenFondo"
                 alt="Wos"
               />
@@ -246,7 +247,7 @@
           <div class="col-12 col-md-3 pt-2 card text-bg-dark">
             <a href="#">
               <img
-                src="./img/metallica3.jpg"
+                src="../img/metallica3.jpg"
                 class="card-img imagenFondo"
                 alt="Metallica"
               />
@@ -257,7 +258,7 @@
           <div class="col-12 col-md-3 card text-bg-dark">
             <a href="#">
               <img
-                src="./img/maria-becerra.avif"
+                src="../img/maria-becerra.avif"
                 class="card-img imagenFondo"
                 alt="Maria Becerra"
               />
@@ -266,7 +267,7 @@
           <div class="col-12 col-md-3 pt-2 card text-bg-dark">
             <a href="#">
               <img
-                src="./img/fito-paez_yo-te-amor.jpg"
+                src="../img/fito-paez_yo-te-amor.jpg"
                 class="card-img imagenFondo"
                 alt="Fito Paez"
               />
@@ -275,7 +276,7 @@
           <div class="col-12 col-md-3 pt-2 card text-bg-dark">
             <a href="#">
               <img
-                src="./img/ke-personaje-album.webp"
+                src="../img/ke-personaje-album.webp"
                 class="card-img imagenFondo"
                 alt="Ke Personaje"
               />
@@ -284,7 +285,7 @@
           <div class="col-12 col-md-3 pt-2 card text-bg-dark">
             <a href="#">
               <img
-                src="./img/nahuel-pennisi-album.jpg"
+                src="../img/nahuel-pennisi-album.jpg"
                 class="card-img imagenFondo"
                 alt="Nahuel Pennisi"
               />
