--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="./CSS/style.css" />
-    <title>Document</title>
+    <title>SoundG3</title>
   </head>
   <body>
-    <header></header>
-    <main class="my-4">
+    <main>
       <section class="container-fluid seccion-carousel">
         <div id="carouselExample" class="carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div class="d-flex flex-row justify-content-around">
+              <div class="d-flex flex-row justify-content-around mt-4">
                 <div
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
@@ -68,7 +67,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="d-flex flex-row justify-content-around">
+              <div class="d-flex flex-row justify-content-around mt-4">
                 <div
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
@@ -505,7 +504,6 @@
         </div>
       </section>
     </main>
-    <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
