se cambio boton ver mas y agrego fondo al titulo

--- a/pages/administrarCanciones.html
+++ b/pages/administrarCanciones.html
@@ -13,7 +13,9 @@
     <title>Lista de canciones</title>
   </head>
   <body>
-    <h1 class="text-white text-center mt-3">Lista de Canciónes</h1>
+    <div class="banner">
+      <h1 class="text-white text-center my-2">Lista de Canciónes</h1>
+  </div>
     <main class="container my-5">
       
       <div class="d-flex align-items-center justify-content-end titulo mt-2">
@@ -46,56 +48,7 @@
               <td>Canción animal</td>
               <td>1990</td>
               <td>
-                <a class="btn btn-info my-1" href="">Ver mas</a>
-                <button class="btn btn-warning">Editar</button>
-                <button class="btn btn-danger my-1">Borrar</button>
-              </td>
-            </tr>
-
-            <tr>
-              <th scope="row">2</th>
-              <td>Musica ligera</td>
-              <td>Soda stereo</td>
-              <td>Canción animal</td>
-              <td>1990</td>
-              <td>
-                <a class="btn btn-info my-1" href="">Ver mas</a>
-                <button class="btn btn-warning">Editar</button>
-                <button class="btn btn-danger my-1">Borrar</button>
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td>Musica ligera</td>
-              <td>Soda stereo</td>
-              <td>Canción animal</td>
-              <td>1990</td>
-              <td>
-                <a class="btn btn-info my-1" href="">Ver mas</a>
-                <button class="btn btn-warning">Editar</button>
-                <button class="btn btn-danger my-1">Borrar</button>
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">4</th>
-              <td>Musica ligera</td>
-              <td>Soda stereo</td>
-              <td>Canción animal</td>
-              <td>1990</td>
-              <td>
-                <a class="btn btn-info my-1" href="">Ver mas</a>
-                <button class="btn btn-warning">Editar</button>
-                <button class="btn btn-danger my-1">Borrar</button>
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">5</th>
-              <td>Musica ligera</td>
-              <td>Soda stereo</td>
-              <td>Canción animal</td>
-              <td>1990</td>
-              <td>
-                <a class="btn btn-info my-1" href="">Ver mas</a>
+                <a class="btn btn-info my-1" href="">Detalles</a>
                 <button class="btn btn-warning">Editar</button>
                 <button class="btn btn-danger my-1">Borrar</button>
               </td>
