Se realizaron cambios en los estilos de registro

--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
         </div>
       </nav>
     </header>
-    <header></header>
     <main class="my-4">
       <section class="container-fluid seccion-carousel">
         <div id="carouselExample" class="carousel slide">
@@ -219,7 +218,7 @@
           </button>
         </div>
       </section>
-
+      <a href="./pages/registro.html" class="btn btn-success fs-5 botonesUsuario" type="submit">Pagina Registro</a>
       <h2 class="text-white m-3">Albumes populares</h2>
       <section class="m-3 seccion-artistas">
         <div class="container-fluid text-center">
