--- a/pages/registro.html
+++ b/pages/registro.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../CSS/style.css" />
-    <title>Registro</title>
+    <title>Registrate</title>
   </head>
   <body>
     <main>
@@ -84,8 +84,8 @@
                 Crear Cuenta
             </button>
           </div>
-          <div class="d-flex flex-row">
-            <p class="pe-3 pt-3">¿Ya tienes una cuenta?</p>
+          <div class="d-flex flex-row justify-content-center">
+            <p class="pe-3 pt-3" id="textoRegistro">¿Ya tienes una cuenta?</p>
             <a href="./login.html" class="text-decoration-none pt-3 ps-3">Inicia Sesión</a>
           </div>
         </form>
