--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Streaming de musica" />
+    <meta name="keywords" content="musica, streaming, artistas, tendencias" />
+    <meta name="author" content="Grupo 3" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,12 +26,90 @@
     <title>SoundG3</title>
   </head>
   <body>
+    <header class="fixed-top mb-5">
+      <nav
+        class="efectoBlur navbar navbar-expand-md bg-body-tertiary navbar bg-dark border-bottom border-body py-3"
+        data-bs-theme="dark"
+      >
+        <div class="container">
+          <a class="navbar-brand m-lg-0" href="#">
+            <img src="./IMG/logosoundg3.png" alt="g3SoundGIF" id="imglogo" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div id="elementosNavbar">
+              <ul class="navbar-nav me-auto mx-lg-5" id="listaNavbar">
+                <div class="d-flex mb-md-3" id="elementosNav">
+                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
+                    <a class="nav-link active" aria-current="page" href="#">
+                      <i class="fa-solid fa-house"></i>
+                      Inicio
+                    </a>
+                  </li>
+                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
+                    <a class="nav-link" href="#">
+                      <i class="fa-solid fa-globe"></i>
+                      Libreria</a
+                    >
+                  </li>
+                  <li class="nav-item p-lg-2 px-xl-2 mx-md-3 py-sm-3">
+                    <a class="nav-link" href="#">
+                      <i class="fa-solid fa-bookmark"></i>
+                      Lista de reproduccion
+                    </a>
+                  </li>
+                </div>
+                <form
+                  class="d-flex justify-content-center align-items-center p-lg-0 px-xl-2"
+                  role="search"
+                >
+                  <input
+                    id="inputBuscar"
+                    class="form-control me-2 p-lg-2 mx-xl-2"
+                    type="search"
+                    placeholder="Buscar"
+                    aria-label="Buscar"
+                  />
+                  <a href="#" type="submit" id="buscarNavbar" class="mx-2">
+                    <i
+                      class="fa-solid fa-magnifying-glass"
+                      style="color: #ffffff"
+                    ></i>
+                  </a>
+                </form>
+              </ul>
+            </div>
+            <div class="d-flex flex-column">
+              <button
+                class="btn btn-success my-3 fs-5 botonesUsuario"
+                type="submit"
+              >
+                Iniciar sesión
+              </button>
+              <button class="btn btn-success fs-5 botonesUsuario" type="submit">
+                Registrate
+              </button>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
     <main>
       <section class="container-fluid seccion-carousel">
         <div id="carouselExample" class="carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div class="d-flex flex-row justify-content-around mt-4">
+              <div class="d-flex flex-row justify-content-around">
                 <div
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
@@ -67,7 +154,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="d-flex flex-row justify-content-around mt-4">
+              <div class="d-flex flex-row justify-content-around">
                 <div
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
@@ -146,7 +233,9 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill text-black"></i></a>
+                <a href="./pages/error404.html"
+                  ><i class="bi bi-play-circle-fill text-black"></i
+                ></a>
               </div>
               <p class="text-center text-white">Tus me gusta</p>
             </div>
@@ -159,7 +248,9 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
+                <a href="./pages/error404.html"
+                  ><i class="bi bi-play-circle-fill"></i
+                ></a>
               </div>
               <p class="text-center text-white">Yo Te Amo</p>
             </div>
@@ -172,7 +263,9 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
+                <a href="./pages/error404.html"
+                  ><i class="bi bi-play-circle-fill"></i
+                ></a>
               </div>
               <p class="text-center text-white">Oktubre</p>
             </div>
@@ -185,7 +278,9 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
+                <a href="./pages/error404.html"
+                  ><i class="bi bi-play-circle-fill"></i
+                ></a>
               </div>
               <p class="text-center text-white">Load</p>
             </div>
@@ -198,7 +293,9 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
+                <a href="./pages/error404.html"
+                  ><i class="bi bi-play-circle-fill"></i
+                ></a>
               </div>
               <p class="text-center text-white">Primavera</p>
             </div>
@@ -211,7 +308,9 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
+                <a href="./pages/error404.html"
+                  ><i class="bi bi-play-circle-fill"></i
+                ></a>
               </div>
               <p class="text-center text-white">Animal</p>
             </div>
@@ -224,7 +323,9 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
+                <a href="./pages/error404.html"
+                  ><i class="bi bi-play-circle-fill"></i
+                ></a>
               </div>
               <p class="text-center text-white">Taylor Swift</p>
             </div>
@@ -237,7 +338,9 @@
                 alt="imagen de album"
               />
               <div class="icono-superpuesto">
-                <a href="./pages/error404.html"><i class="bi bi-play-circle-fill"></i></a>
+                <a href="./pages/error404.html"
+                  ><i class="bi bi-play-circle-fill"></i
+                ></a>
               </div>
               <p class="text-center text-white">Abbey Road</p>
             </div>
@@ -397,7 +500,6 @@
             </div>
           </div>
         </div>
-
       </section>
 
       <section class="my-5">
@@ -504,9 +606,119 @@
         </div>
       </section>
     </main>
+
+    <footer class="">
+      <div class="container text-center py-3">
+        <div class="row">
+          <div
+            class="col-12 col-sm-12 col-md-12 col-lg-3"
+            id="contenedorLogoFooter"
+          >
+            <a href="index.html" class="contenedorLogo">
+              <img
+                src="./img/logosoundg3.png"
+                alt="Logo"
+                class=""
+                id="imgFooter"
+              />
+            </a>
+          </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
+            <ul class="listaFooter">
+              <li class="mt-3 list-unstyled">
+                <h4 class="text-light fw-bold">Productos</h4>
+              </li>
+              <li class="mt-3 list-unstyled">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Ingresar</a
+                >
+              </li>
+              <li class="mt-3 list-unstyled">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Registro</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
+            <ul class="listaFooter">
+              <li class="mt-3 list-unstyled">
+                <h4 class="text-light fw-bold">Acerca de</h4>
+              </li>
+              <li class="mt-3 list-unstyled">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Acerca de Nosotros</a
+                >
+              </li>
+              <li class="mt-3 list-unstyled">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Ayuda</a
+                >
+              </li>
+            </ul>
+            <div class="d-flex flex-column">
+              <p class="text-light">Síguenos en nuestras redes:</p>
+              <div class="d-flex justify-content-center">
+                <a href="../pages/error404.html"
+                  ><i class="bi bi-instagram fs-3 m-2"></i
+                ></a>
+                <a href="../pages/error404.html"
+                  ><i class="bi bi-facebook fs-3 m-2"></i
+                ></a>
+                <a href="../pages/error404.html"
+                  ><i class="bi bi-twitter fs-3 m-2"></i
+                ></a>
+                <a href="../pages/error404.html"
+                  ><i class="bi bi-linkedin fs-3 m-2"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
+            <ul class="listaFooter">
+              <li class="mt-3 list-unstyled">
+                <h4 class="text-light fw-bold">Legales</h4>
+              </li>
+              <li class="mt-3 list-unstyled">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Información Legal</a
+                >
+              </li>
+              <li class="mt-3 list-unstyled">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Privacidad</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid d-flex justify-content-center">
+        <p class="text-light">
+          &copy; Sound G3 - Todos los derechos reservados
+        </p>
+      </div>
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/166a168cfc.js"
       crossorigin="anonymous"
     ></script>
     <script src="./JS/app.js"></script>
