se corrigio el logo del footer

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
             class="col-12 col-sm-12 col-md-12 col-lg-3"
             id="contenedorLogoFooter"
           >
-            <a href="index.html" class="contenedorLogo">
+            <a href="index.html" class="contenedorLogo d-flex justify-content-center">
               <img
                 src="./img/logosoundg3.png"
                 alt="Logo"
