--- a/pages/administrarCanciones.html
+++ b/pages/administrarCanciones.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Streaming de musica" />
+    <meta name="keywords" content="musica, streaming, artistas, tendencias" />
+    <meta name="author" content="Grupo 3" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,6 +22,81 @@
     <title>Lista de canciones</title>
   </head>
   <body>
+    <header class="fixed-top mb-5">
+      <nav
+        class="efectoBlur navbar navbar-expand-md bg-body-tertiary navbar bg-dark border-bottom border-body py-3"
+        data-bs-theme="dark"
+      >
+        <div class="container">
+          <a class="navbar-brand m-lg-0" href="#">
+            <img src="./IMG/logosoundg3.png" alt="g3SoundGIF" id="imglogo">
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div id="elementosNavbar">
+              <ul class="navbar-nav me-auto mx-lg-5" id="listaNavbar">
+                <div class="d-flex mb-md-3" id="elementosNav">
+                  <li class="nav-item p-lg-2 px-xl-2  mx-md-3 py-sm-3">
+                    <a class="nav-link active" aria-current="page" href="#">
+                      <i class="fa-solid fa-house"></i>
+                      Inicio
+                    </a>
+                  </li>
+                  <li class="nav-item p-lg-2 px-xl-2  mx-md-3 py-sm-3">
+                    <a class="nav-link" href="#">
+                      <i class="fa-solid fa-globe"></i>
+                      Libreria</a
+                    >
+                  </li>
+                  <li class="nav-item p-lg-2 px-xl-2  mx-md-3 py-sm-3">
+                    <a class="nav-link" href="#">
+                      <i
+                        class="fa-solid fa-bookmark"
+                      ></i>
+                      Lista de reproduccion
+                    </a>
+                  </li>
+                </div>
+                <form
+                  class="d-flex justify-content-center align-items-center p-lg-0 px-xl-2"
+                  role="search"
+                >
+                  <input
+                    id="inputBuscar"
+                    class="form-control me-2 p-lg-2 mx-xl-2 "
+                    type="search"
+                    placeholder="Buscar"
+                    aria-label="Buscar"
+                  />
+                  <a href="#" type="submit" id="buscarNavbar" class="mx-2">
+                    <i
+                      class="fa-solid fa-magnifying-glass"
+                      style="color: #ffffff"
+                    ></i>
+                  </a>
+                </form>
+              </ul>
+            </div>
+            <div class="d-flex flex-column">
+              <button class="btn btn-success my-3 fs-5 botonesUsuario" type="submit">
+                Iniciar sesión
+              </button>
+              <button class="btn btn-success fs-5 botonesUsuario" type="submit">Registrate</button>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
     <div class="banner">
       <h1 class="text-white text-center my-2">Lista de Canciónes</h1>
   </div>
@@ -32,7 +116,7 @@
         <table class="table table-dark table-striped">
           <thead>
             <tr>
-              <th scope="col">#</th>
+              <th scope="col">Id</th>
               <th scope="col">Canción</th>
               <th scope="col">Artista</th>
               <th scope="col">Álbum</th>
@@ -130,6 +214,10 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script
+    src="https://kit.fontawesome.com/166a168cfc.js"
+    crossorigin="anonymous"
+  ></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/app.js" type="module"></script>
   </body>
