Se cambio el texto del campo usuario

--- a/pages/registro.html
+++ b/pages/registro.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../CSS/style.css" />
     <title>Registrate</title>
   </head>
-  <body>
+  <body id="mainRegistro">
     <main>
       <section class="container contenedorForm py-3">
         <h3 class="text-center mb-3">
@@ -43,7 +43,7 @@
                   class="form-control"
                   id="nombredeUsuario"
                   aria-describedby="inputGroupPrepend3 nombredeUsuarioFeedback"
-                  placeholder="yourUsername"
+                  placeholder="tuUsuario"
                   minlength="6"
                   maxlength="20"
                   required
