se realizaron correciones al estilo

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       </section>
 
       <h2 class="text-white mx-3 mt-5">Canciones populares</h2>
-      <section class="my-3">
+      <section class="my-3 mx-0">
         <div class="card">
           <div
             class="card-body d-flex flex-row justify-content-around align-items-center text-bg-dark pistaMusica"
@@ -607,14 +607,17 @@
       </section>
     </main>
 
-    <footer class="">
-      <div class="container text-center py-3">
-        <div class="row">
+    <footer>
+      <div class="text-center py-3">
+        <div class="row m-0">
           <div
             class="col-12 col-sm-12 col-md-12 col-lg-3"
             id="contenedorLogoFooter"
           >
-            <a href="index.html" class="contenedorLogo d-flex justify-content-center">
+            <a
+              href="index.html"
+              class="contenedorLogo d-flex justify-content-center"
+            >
               <img
                 src="./img/logosoundg3.png"
                 alt="Logo"
