se cargaron nuevas imagenes

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                   class="d-flex justify-content-center flex-column selecion-artista"
                 >
                   <img
-                    src="./img/maria-becerra.jpg"
+                    src="./img/maria-becerra-getty11-e.jpg"
                     class="d-block"
                     alt="imagen de artista"
                   />
