Se cambio el tamaño de los campo de texto y se añadio el footer

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               >
                 Iniciar sesión
               </button>
-              <button class="btn btn-success fs-5 botonesUsuario" type="submit">
+              <button class="btn btn-success fs-5 botonesUsuario" type="submit" onclick="location.href='./pages/registro.html';">
                 Registrate
               </button>
             </div>
