--- a/pages/registro.html
+++ b/pages/registro.html
@@ -12,15 +12,15 @@
     <link rel="stylesheet" href="../CSS/style.css" />
     <title>Registrate</title>
   </head>
-  <body id="mainRegistro">
-    <main>
+  <body>
+    <main id="mainRegistro">
       <section class="container contenedorForm py-3">
         <h3 class="text-center mb-3">
           <b>Regístrate para empezar <br />a escuchar contenido</b>
         </h3>
         <form class="row d-flex justify-content-center">
           <fieldset>
-            <div class="col-md-12 col-xl-6 col-sm-12 pb-3">
+            <div class="col-md-12 col-xl-12 col-sm-12 pb-3">
               <label for="nombre" class="form-label">Tu Nombre</label>
               <input
                 type="text"
@@ -99,6 +99,113 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="text-center py-3">
+        <div class="row m-0">
+          <div
+            class="col-12 col-sm-12 col-md-12 col-lg-3"
+            id="contenedorLogoFooter"
+          >
+            <a
+              href="index.html"
+              class="contenedorLogo d-flex justify-content-center"
+            >
+              <img
+                src="../img/logosoundg3.png"
+                alt="Logo"
+                class=""
+                id="imgFooter"
+              />
+            </a>
+          </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
+            <ul class="listaFooter">
+              <li class="mt-3 list-unstyled">
+                <h4 class="text-light fw-bold">Productos</h4>
+              </li>
+              <li class="mt-3 list-unstyled">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Ingresar</a
+                >
+              </li>
+              <li class="mt-3 list-unstyled">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Registro</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
+            <ul class="listaFooter">
+              <li class="mt-3 list-unstyled">
+                <h4 class="text-light fw-bold">Acerca de</h4>
+              </li>
+              <li class="mt-3 list-unstyled">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Acerca de Nosotros</a
+                >
+              </li>
+              <li class="mt-3 list-unstyled">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Ayuda</a
+                >
+              </li>
+            </ul>
+            <div class="d-flex flex-column">
+              <p class="text-light">Síguenos en nuestras redes:</p>
+              <div class="d-flex justify-content-center">
+                <a href="../pages/error404.html"
+                  ><i class="bi bi-instagram fs-3 m-2"></i
+                ></a>
+                <a href="../pages/error404.html"
+                  ><i class="bi bi-facebook fs-3 m-2"></i
+                ></a>
+                <a href="../pages/error404.html"
+                  ><i class="bi bi-twitter fs-3 m-2"></i
+                ></a>
+                <a href="../pages/error404.html"
+                  ><i class="bi bi-linkedin fs-3 m-2"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
+            <ul class="listaFooter">
+              <li class="mt-3 list-unstyled">
+                <h4 class="text-light fw-bold">Legales</h4>
+              </li>
+              <li class="mt-3 list-unstyled">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Información Legal</a
+                >
+              </li>
+              <li class="mt-3 list-unstyled">
+                <a
+                  href=""
+                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
+                  >Privacidad</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid d-flex justify-content-center">
+        <p class="text-light">
+          &copy; Sound G3 - Todos los derechos reservados
+        </p>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
