Se añadio hoja de estilo propia al footer

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/styleFooter.css" />
     <title>SoundG3</title>
   </head>
   <body>
@@ -709,7 +710,6 @@
         </div>
       </div>
       <div class="container-fluid d-flex justify-content-center">
-
         <p class="text-light">
           &copy; Sound G3 - Todos los derechos reservados
         </p>
@@ -727,4 +727,3 @@
     <script src="./JS/app.js"></script>
   </body>
 </html>
-
