Trabaje en el aspecto responsive de la pagina.

--- a/pages/iniciarSesion.html
+++ b/pages/iniciarSesion.html
@@ -104,10 +104,10 @@
     <main>
       <section class="container" id="contenedorPrincipal">
         <div class="row justify-content-center">
-          <article class="col-xl-4 col-lg-4 p-0">
-            <img class="rounded-start-5" id="imgIniciarSesion" src="../img/music.jpg" alt="music" />
+          <article class="col-xl-4 col-lg-4 col-md-6 p-0">
+            <img class="rounded-start-4" id="imgIniciarSesion" src="../img/music.jpg" alt="music" />
           </article>
-          <article class="col-xl-4 col-lg-4 rounded-end-5 contenedorIniciarSesion">
+          <article class="px-4 col-xl-4 col-lg-4 col-md-6 rounded-end-4 contenedorIniciarSesion">
             <form>
               <h1 class="py-3 text-center">Iniciar sesión</h1>
               <div>
@@ -126,7 +126,7 @@
               </div>
               <div>
                 <label for="claveIniciarSesion" class="form-label lead mb-2"
-                  >Contraseña</label
+                  >Contraseña:</label
                 >
                 <input
                   type="password"
@@ -146,7 +146,7 @@
                 </button>
               </div>
               <div>
-                <p class="text-center" id="alternativaIniciarSesion">O tambien podés</p>
+                <p class="text-center fs-6" id="alternativaIniciarSesion">O tambien podés</p>
                 <div>
                   <button
                     type="submit"
