Se realizo la reestructuracion del codigo y se solucionaron errores

--- a/pages/artista.html
+++ b/pages/artista.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/mariaBecerra.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+    crossorigin="anonymous"
     />
     <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
     />
+    <link rel="stylesheet" href="../css/artista.css" />
     <title>Maria Becerra: Te Cura-SoundG3</title>
     <link rel="shortcut icon" href="../img/FavIcon/android-chrome-512x512.png" type="image/x-icon">
   </head>
@@ -110,7 +110,7 @@
               <div class="col-12 col-md-4 col-lg-4 text-light infoAlbum">
                 <p class="pt-4">Album: La nena de argentina</p>
               </div>
-              <div class="col-3 col-md 4 col-lg-3 text-center px-0 iconsPistas2 pt-2">
+              <div class="col-3 col-md-4 col-lg-3 text-center px-0 iconsPistas2 pt-2">
                 <a href="#"><i class="bi bi-heart fs-5 text-light meGusta"></i></a>
                 <a href="#"
                   ><i class="bi bi-plus-circle fs-5 text-light"></i
@@ -211,8 +211,8 @@
       <section class="container-fluid pb-4 otrosInterpretes">
         <p class="h2 text-light pt-4 pb-4 text-center tituloTop">Te puede interesar...</p>
         <div class="row listaAleatoria">
-          <div class="col-12 col-md-3 pt-2 card text-bg-dark ">
-            <a href="#">
+          <div class="col-6 col-md-3 pt-2 card text-bg-dark ">
+            <a href="#" class="m-4">
               <i class="bi bi-plus-circle iconoSuperpuesto "></i>
               <img
                 src="../img/favoritodisco.jpg"
@@ -220,13 +220,8 @@
                 alt="Imagen disco"
               />
             </a>
-            <div class="card-img-overlay">
-              <h5 class="card-title text-center h2 tituloFavoritos">
-                Favoritos
-              </h5>
-            </div>
           </div>
-          <div class="col-12 col-md-3 pt-2 card text-bg-dark">
+          <div class="col-6 col-md-3 pt-2 card text-bg-dark">
             <a href="#">
               <img
                 src="../img/Taylor-Swift.webp"
@@ -235,7 +230,7 @@
               />
             </a>
           </div>
-          <div class="col-12 col-md-3 pt-2 card text-bg-dark">
+          <div class="col-6 col-md-3 pt-2 card text-bg-dark">
             <a href="#">
               <img
                 src="../img/wos1.jpg"
@@ -244,7 +239,7 @@
               />
             </a>
           </div>
-          <div class="col-12 col-md-3 pt-2 card text-bg-dark">
+          <div class="col-6 col-md-3 pt-2 card text-bg-dark">
             <a href="#">
               <img
                 src="../img/metallica3.jpg"
@@ -255,7 +250,7 @@
           </div>
         </div>
         <div class="row listaAleatoria">
-          <div class="col-12 col-md-3 card text-bg-dark">
+          <div class="col-6 col-md-3 card text-bg-dark">
             <a href="#">
               <img
                 src="../img/LosRedonditos.jpg"
@@ -264,7 +259,7 @@
               />
             </a>
           </div>
-          <div class="col-12 col-md-3 pt-2 card text-bg-dark">
+          <div class="col-6 col-md-3 pt-2 card text-bg-dark">
             <a href="#">
               <img
                 src="../img/fito-paez_yo-te-amor.jpg"
@@ -273,7 +268,7 @@
               />
             </a>
           </div>
-          <div class="col-12 col-md-3 pt-2 card text-bg-dark">
+          <div class="col-6 col-md-3 pt-2 card text-bg-dark">
             <a href="#">
               <img
                 src="../img/ke-personaje-album.webp"
@@ -282,7 +277,7 @@
               />
             </a>
           </div>
-          <div class="col-12 col-md-3 pt-2 card text-bg-dark">
+          <div class="col-6 col-md-3 pt-2 card text-bg-dark">
             <a href="#">
               <img
                 src="../img/losBeatles.jpg"
