--- a/pages/artista.html
+++ b/pages/artista.html
@@ -299,5 +299,6 @@
       src="https://kit.fontawesome.com/3e4abcbe5c.js"
       crossorigin="anonymous"
     ></script>
+    <script src="../JS/localStorage.js"></script>
   </body>
 </html>
