--- a/pages/registro.html
+++ b/pages/registro.html
@@ -211,6 +211,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script src="./JS/app.js"></script>
+    <script src="../JS/localStorage.js"></script>
   </body>
 </html>
